reversed circles, circles became 'circles nothing'

--- a/circlesnothing/index.html
+++ b/circlesnothing/index.html
@@ -9,19 +9,7 @@
   </head>
   <body>
     <main>
-      <ul class="image-list">
-        <!--  <li>
-          <img
-            src="https://res.cloudinary.com/explodingdog/image/upload/w_1200/circle4.jpg"
-            alt="cirlce4"
-          />
-        </li>
-        <li>
-          <img
-            src="https://res.cloudinary.com/explodingdog/image/upload/w_1200/circle1.jpg"
-          />
-        </li> -->
-      </ul>
+      <ul class="image-list"></ul>
     </main>
     <script src="script.js"></script>
   </body>
