--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <h1>Fantastic Headache club</h1>
       <ul>
-          <li><a href="circles">circles</li>
+          <li><a href="circlesnothing">circles nothing</li>
       </ul>
   </body>
 </html>
